fix: return DTO objects from service methods